[package]
name = "resoxide-link"
version = "0.1.0"
edition = "2024"

[features]
defaults = ["glam"]
glam = ["dep:glam"]
client = ["dep:tokio", "dep:tokio-stream", "dep:tokio-tungstenite", "dep:futures-util"]

[dependencies]
rust_decimal = { version = "1.39.0", features = ["serde_json"] }
glam = { version = "0.30.10", optional = true }
tokio = { version = "1.49.0", features = ["full"], optional = true }
tokio-stream = { version = "0.1.18", optional = true }
tokio-tungstenite = { version = "0.28.0", optional = true }
futures-util = { version = "0.3.31", optional = true }

[dependencies.resoxide-json]
#path = "../resoxide-json"
git = "https://github.com/Resoxide/resoxide-json.git"
rev = "990e7cd"

[dev-dependencies]
tungstenite = { version = "0.28.0", features = ["handshake"] }

[build-dependencies]
syn = "2"
quote = "1"
prettyplease = "0.2.37"
stringcase = "0.4.0"
proc-macro2 = "1"
